--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ header {
     color: inherit; 
     text-decoration: inherit; 
     margin: 0 20px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .active {
@@ -118,7 +118,7 @@ hr { display: block; height: 2px;
 .cta p {
     margin: 10px 0;
     opacity: 0.25;
-    font-size: 10px;
+    font-size: 14px;
 }
 
 .blocked {
@@ -218,18 +218,31 @@ hr { display: block; height: 2px;
 }
 
 .card-button {
-    border-radius: 12px;
+    border-radius: 15px;
     background-color: lime;
     font-weight: 600;
     color: black;
-    padding: 15px;
+    padding: 10px;
     justify-content: center;
     display: flex;
     align-items: center;
 }
 
+.card-button p {
+    font-size: 21px;
+    font-weight: 700;
+}
+
+.card-button .material-icons {
+    font-size: 25px;
+}
+
+.card-button span {
+    margin-right: 5px;
+}
+
 footer {
-    padding: 15px;
+    padding: 20px 0;
     display: flex;
     margin: auto;
     justify-content: space-between;
@@ -247,13 +260,13 @@ footer {
     text-decoration: inherit; 
     margin-right: 20px;
     font-weight: 300;
-    font-size: 13px;
+    font-size: 16px;
     color: white;
 }
 
 .footer-copyright {
     font-weight: 300;
-    font-size: 13px;
+    font-size: 16px;
     color: white;
 }
 
